--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,15 +1,5 @@
-<div class="container">
-
-  {{ diagnostic }}
-    <h2>User Form</h2>
-    <form #userForm="ngForm">
-      <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" required [(ngModel)]="model.name" name="name">
-      </div>
- 
-      <button type="submit" class="btn btn-success">Submit</button>
- 
-    </form>
-    {{model.name}}
-</div>
+ <form [formGroup]="signup_form">
+      <input formControlName="name">
+      <input formControlName="email" placeholder="Email">
+      <button>Submit</button>
+</form>
